--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "del": "^3.0.0",
+    "del": "1.2.1",
     "express": "latest",
     "gulp": "^3.9.1",
     "gulp-sass": "^4.0.1",
